<resources>
    <string name="app_name">EtchABot</string>
    <string name="action_settings">Settings</string>
    <string name="default_angle">0°</string>
    <string name="default_strength">0%</string>
    <string name="start_button_text">Start</string>
    <string name="stop_button_text">Stop</string>
    <string name="param_text">Enter two numbers between 15 and 85 or leave them blank and two random numbers will be generated.</string>
    <string name="k_param_default">30</string>
    <string name="l_param_default">80</string>
    <string name="spirograph">Spirograph</string>
    <string name="microstep">MicroStep</string>
    <string name="spirograph_lisajous_switch_label_text">Spirograph/Lisajous</string>
    <string name="about">About</string>
    <string name="about_message">An App to control an Etch-A-Sketch via Bluetooth. For more information and full project details check out my GitHub: https://github.com/GedaliaR/EtchABot</string>
</resources>
